test/org/midica/testfiles/failing/pattern-with-shift.midica
INCLUDE inc/instruments.midica

PATTERN pat
	0 /1  s=1
END
